<resources>
    <string name="app_name">Permission</string>
    <string name="paylook">PayLook</string>
    <string name="summary">Summary</string>
    <string name="total_amount">Total Amount</string>
    <string name="money_received">Money Received</string>
    <string name="spend_today">Spend Today</string>
    <string name="_0">0</string>
    <string name="_350">350</string>
    <string name="_200rs">200Rs</string>
    <string name="location">location</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="textview">TextView</string>
    <string name="text_view">text view</string>
</resources>