<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/paylook"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <androidx.appcompat.widget.AppCompatImageView-->
    <!--        android:layout_width="26dp"-->
    <!--        android:layout_height="16dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:layout_marginRight="16dp"-->
    <!--        android:src="@drawable/search"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/textTitle"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@id/textTitle"-->
    <!--        app:tint="@color/white" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="update"
        android:textSize="10sp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textTitle"
        android:onClick="Read_SMS"


        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@id/viewHeaderBackground"
        app:layout_constraintTop_toBottomOf="@id/viewHeaderBackground">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/textViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layoutMoneySpend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layoutMoneyReceived"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/money" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/spend_today"
                    android:textColor="@color/secondary_text"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_350"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMoneyReceived"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layoutTotalAmount"
                app:layout_constraintStart_toEndOf="@id/layoutMoneySpend"
                app:layout_constraintTop_toBottomOf="@id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/wallet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/money_received"
                    android:textColor="@color/secondary_text"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTotalAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutMoneyReceived"
                app:layout_constraintTop_toBottomOf="@id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/totalamount" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/total_amount"
                    android:textColor="@color/secondary_text"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <ListView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/listview"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="none"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@id/cardHeader"
        tools:listitem="@layout/list_item1"
        android:divider="@null"
        android:dividerHeight="@dimen/_8sdp"/>
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:clipToPadding="false"-->
<!--        android:overScrollMode="never"-->
<!--        android:padding="16dp"-->
<!--        android:scrollbars="none"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/cardHeader">-->
<!--                <LinearLayout-->
<!--                    android:id="@+id/allTransactions"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical"-->
<!--                    >-->
<!--                </LinearLayout>-->
<!--        -->

<!--    </ScrollView>-->
</androidx.constraintlayout.widget.ConstraintLayout>

